// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FollowersList - Snapshots > matches snapshot with empty list 1`] = `
<div
  class="gap-3.5 rounded-md bg-transparent p-0 lg:gap-3 lg:bg-card lg:p-6"
  data-testid="container"
/>
`;

exports[`FollowersList - Snapshots > matches snapshot with followers 1`] = `
<div
  class="gap-3.5 rounded-md bg-transparent p-0 lg:gap-3 lg:bg-card lg:p-6"
  data-testid="container"
>
  <div
    data-id="test-user-1"
    data-testid="follower-item"
  >
    John Doe
  </div>
  <div
    data-id="test-user-2"
    data-testid="follower-item"
  >
    Jane Smith
  </div>
</div>
`;
